[package]
name = "codecrafters-sqlite"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.3.0"
thiserror = "2"
nom = "8.0.0"
miette = { version = "7.5", features = ["fancy"] }
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
